# Blurt-app

./: .env.example  .gitignore  AUDIT_FRICTION.md  DASHBOARD_REORG.md  NEXT_STEPS.md  PLAN_FRICTION_UNIVERS_GRAPHIQUE.md  README.md  docker-compose.yml  notes  progress.js
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  render.yaml
backend/app/: config.py  main.py  storage.py
backend/app/db/: session.py
backend/app/models/: __init__.py  activity.py  base.py  capture_draft_item.py  enums.py  exercise.py  food.py  meal.py  profile.py  voice_capture.py  workout.py
backend/app/routers/: activities.py  activity_logs.py  capture_stream.py  captures.py  exercises.py  foods.py  history.py  meals.py  profile.py  validation.py  workouts.py
backend/app/schemas/: api.py  catalogue.py  extraction.py  history.py
backend/app/services/: calories.py  catalogue.py  clock.py  embeddings.py  extraction.py  matching.py  mistral_client.py  off_client.py  profile.py  transcription.py  volume.py  workout_sessions.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_rename_rpe_to_rir.py  0003_calories_and_profile.py  0004_muscle_groups.py  0005_nutrition_goals.py  0006_capture_draft_items.py
backend/scripts/: backfill_embeddings.py  import_ciqual.py  seed_activities.py  seed_portions.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  mobile.css
frontend/src/api/: client.ts
frontend/src/components/: ActivityItemRow.tsx  (+31 more)
images/front/: Cavu.heic
(+11 files in other folders)
